// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast filters out noisy comments 1`] = `
Array [
  Object {
    "at": 48,
    "flags": 0,
    "struct": Object {
      "attr": undefined,
      "members": Array [
        Object {
          "attr": undefined,
          "name": "bar",
          "type": "u32",
        },
      ],
      "name": "Foo",
    },
    "symbol": "Foo",
  },
  Object {
    "at": 116,
    "flags": 2,
    "symbol": "x",
    "variable": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "name": "x",
      "qual": undefined,
      "type": "f32",
      "value": undefined,
    },
  },
  Object {
    "at": 150,
    "flags": 2,
    "symbol": "y",
    "variable": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "name": "y",
      "qual": undefined,
      "type": "f32",
      "value": undefined,
    },
  },
  Object {
    "at": 177,
    "flags": 0,
    "func": Object {
      "attr": undefined,
      "identifiers": undefined,
      "inferred": undefined,
      "name": "getValue",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "index",
          "type": "i32",
        },
      ],
      "type": "f32",
    },
    "symbol": "getValue",
  },
  Object {
    "at": 226,
    "flags": 1,
    "func": Object {
      "attr": undefined,
      "identifiers": Array [
        "x",
        "y",
        "getValue",
        "v",
      ],
      "inferred": undefined,
      "name": "main",
      "parameters": undefined,
      "type": "vec3<f32>",
    },
    "symbol": "main",
  },
]
`;

exports[`ast gets geometry quad symbol table 1`] = `
Object {
  "bindings": undefined,
  "declarations": Array [
    Object {
      "at": 0,
      "constant": Object {
        "attr": undefined,
        "identifiers": undefined,
        "name": "QUAD",
        "type": "array<vec2<i32>, 4>",
        "value": "array<vec2<i32>, 4>(
  vec2<i32>(0, 0),
  vec2<i32>(1, 0),
  vec2<i32>(0, 1),
  vec2<i32>(1, 1),
)",
      },
      "flags": 0,
      "symbol": "QUAD",
    },
    Object {
      "at": 137,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "QUAD",
        ],
        "inferred": undefined,
        "name": "getQuadIndex",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "vertex",
            "type": "i32",
          },
        ],
        "type": "vec2<i32>",
      },
      "symbol": "getQuadIndex",
    },
    Object {
      "at": 215,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "getQuadIndex",
        ],
        "inferred": undefined,
        "name": "getQuadUV",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "vertex",
            "type": "i32",
          },
        ],
        "type": "vec2<f32>",
      },
      "symbol": "getQuadUV",
    },
  ],
  "enables": undefined,
  "exports": Array [
    Object {
      "at": 137,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "QUAD",
        ],
        "inferred": undefined,
        "name": "getQuadIndex",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "vertex",
            "type": "i32",
          },
        ],
        "type": "vec2<i32>",
      },
      "symbol": "getQuadIndex",
    },
    Object {
      "at": 215,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "getQuadIndex",
        ],
        "inferred": undefined,
        "name": "getQuadUV",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "vertex",
            "type": "i32",
          },
        ],
        "type": "vec2<f32>",
      },
      "symbol": "getQuadUV",
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": Array [
    "QUAD",
    "getQuadIndex",
    "getQuadUV",
  ],
  "visibles": Array [
    "getQuadIndex",
    "getQuadUV",
  ],
}
`;

exports[`ast gets inferred type from function declaration 1`] = `
Array [
  Object {
    "alias": Object {
      "attr": Array [
        "infer",
      ],
      "name": "T",
      "type": "T",
    },
    "at": 7,
    "flags": 16,
    "symbol": "T",
  },
  Object {
    "at": 28,
    "flags": 3,
    "func": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": Array [
        "T",
      ],
      "inferred": Array [
        Object {
          "at": -1,
          "name": "T",
        },
      ],
      "name": "main",
      "parameters": undefined,
      "type": Object {
        "attr": Array [
          "infer(T)",
        ],
        "name": "T",
      },
    },
    "symbol": "main",
  },
]
`;

exports[`ast gets linked var/const declarations 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 2,
    "symbol": "x",
    "variable": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "name": "x",
      "qual": undefined,
      "type": "f32",
      "value": undefined,
    },
  },
  Object {
    "at": 31,
    "flags": 2,
    "symbol": "y",
    "variable": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "name": "y",
      "qual": undefined,
      "type": "f32",
      "value": undefined,
    },
  },
  Object {
    "at": 55,
    "constant": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "name": "a",
      "type": "i32",
      "value": "3",
    },
    "flags": 2,
    "symbol": "a",
  },
]
`;

exports[`ast gets quad vertex declarations 1`] = `
Array [
  Object {
    "at": 183,
    "flags": 2,
    "func": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "inferred": undefined,
      "name": "getPosition",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "i",
          "type": "i32",
        },
      ],
      "type": "vec4<f32>",
    },
    "symbol": "getPosition",
  },
  Object {
    "at": 229,
    "flags": 2,
    "func": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "inferred": undefined,
      "name": "getColor",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "i",
          "type": "i32",
        },
      ],
      "type": "vec4<f32>",
    },
    "symbol": "getColor",
  },
  Object {
    "at": 272,
    "flags": 2,
    "func": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "inferred": undefined,
      "name": "getSize",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "i",
          "type": "i32",
        },
      ],
      "type": "vec2<f32>",
    },
    "symbol": "getSize",
  },
  Object {
    "at": 314,
    "flags": 2,
    "func": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "inferred": undefined,
      "name": "getDepth",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "i",
          "type": "i32",
        },
      ],
      "type": "f32",
    },
    "symbol": "getDepth",
  },
  Object {
    "at": 352,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": Array [
        "SolidVertex",
        "position",
        "getPosition",
        "color",
        "getColor",
        "size",
        "getSize",
        "depth",
        "getDepth",
        "center",
        "worldToClip",
        "uv",
        "getQuadUV",
        "xy",
        "pixelScale",
        "getPerspectiveScale",
        "HAS_EDGE_BLEED",
        "viewUniforms",
        "SolidVertex",
      ],
      "inferred": undefined,
      "name": "getQuadVertex",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "vertexIndex",
          "type": "i32",
        },
        Object {
          "attr": undefined,
          "name": "instanceIndex",
          "type": "i32",
        },
      ],
      "type": "SolidVertex",
    },
    "symbol": "getQuadVertex",
  },
]
`;

exports[`ast gets quad vertex imports 1`] = `
Array [
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "SolidVertex",
        "name": "SolidVertex",
      },
    ],
    "name": "@use-gpu/wgsl/use/types",
    "symbols": Array [
      "SolidVertex",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "viewUniforms",
        "name": "viewUniforms",
      },
      Object {
        "imported": "worldToClip",
        "name": "worldToClip",
      },
      Object {
        "imported": "getPerspectiveScale",
        "name": "getPerspectiveScale",
      },
    ],
    "name": "@use-gpu/wgsl/use/view",
    "symbols": Array [
      "viewUniforms",
      "worldToClip",
      "getPerspectiveScale",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "getQuadUV",
        "name": "getQuadUV",
      },
    ],
    "name": "@use-gpu/wgsl/geometry/quad",
    "symbols": Array [
      "getQuadUV",
    ],
  },
]
`;

exports[`ast gets quad vertex symbol table 1`] = `
Object {
  "bindings": undefined,
  "declarations": Array [
    Object {
      "at": 183,
      "flags": 2,
      "func": Object {
        "attr": Array [
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getPosition",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "i",
            "type": "i32",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "getPosition",
    },
    Object {
      "at": 229,
      "flags": 2,
      "func": Object {
        "attr": Array [
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getColor",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "i",
            "type": "i32",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "getColor",
    },
    Object {
      "at": 272,
      "flags": 2,
      "func": Object {
        "attr": Array [
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getSize",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "i",
            "type": "i32",
          },
        ],
        "type": "vec2<f32>",
      },
      "symbol": "getSize",
    },
    Object {
      "at": 314,
      "flags": 2,
      "func": Object {
        "attr": Array [
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getDepth",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "i",
            "type": "i32",
          },
        ],
        "type": "f32",
      },
      "symbol": "getDepth",
    },
    Object {
      "at": 352,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "getPosition",
          "getColor",
          "getSize",
          "getDepth",
        ],
        "inferred": undefined,
        "name": "getQuadVertex",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "vertexIndex",
            "type": "i32",
          },
          Object {
            "attr": undefined,
            "name": "instanceIndex",
            "type": "i32",
          },
        ],
        "type": "SolidVertex",
      },
      "symbol": "getQuadVertex",
    },
  ],
  "enables": undefined,
  "exports": Array [
    Object {
      "at": 352,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "getPosition",
          "getColor",
          "getSize",
          "getDepth",
        ],
        "inferred": undefined,
        "name": "getQuadVertex",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "vertexIndex",
            "type": "i32",
          },
          Object {
            "attr": undefined,
            "name": "instanceIndex",
            "type": "i32",
          },
        ],
        "type": "SolidVertex",
      },
      "symbol": "getQuadVertex",
    },
  ],
  "externals": Array [
    Object {
      "at": 183,
      "flags": 2,
      "func": Object {
        "attr": Array [
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getPosition",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "i",
            "type": "i32",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "getPosition",
    },
    Object {
      "at": 229,
      "flags": 2,
      "func": Object {
        "attr": Array [
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getColor",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "i",
            "type": "i32",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "getColor",
    },
    Object {
      "at": 272,
      "flags": 2,
      "func": Object {
        "attr": Array [
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getSize",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "i",
            "type": "i32",
          },
        ],
        "type": "vec2<f32>",
      },
      "symbol": "getSize",
    },
    Object {
      "at": 314,
      "flags": 2,
      "func": Object {
        "attr": Array [
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getDepth",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "i",
            "type": "i32",
          },
        ],
        "type": "f32",
      },
      "symbol": "getDepth",
    },
  ],
  "globals": undefined,
  "linkable": Object {
    "getColor": true,
    "getDepth": true,
    "getPosition": true,
    "getSize": true,
  },
  "modules": Array [
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "SolidVertex",
          "name": "SolidVertex",
        },
      ],
      "name": "@use-gpu/wgsl/use/types",
      "symbols": Array [
        "SolidVertex",
      ],
    },
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "viewUniforms",
          "name": "viewUniforms",
        },
        Object {
          "imported": "worldToClip",
          "name": "worldToClip",
        },
        Object {
          "imported": "getPerspectiveScale",
          "name": "getPerspectiveScale",
        },
      ],
      "name": "@use-gpu/wgsl/use/view",
      "symbols": Array [
        "viewUniforms",
        "worldToClip",
        "getPerspectiveScale",
      ],
    },
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "getQuadUV",
          "name": "getQuadUV",
        },
      ],
      "name": "@use-gpu/wgsl/geometry/quad",
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "symbols": Array [
    "getPosition",
    "getColor",
    "getSize",
    "getDepth",
    "getQuadVertex",
  ],
  "visibles": Array [
    "getQuadVertex",
  ],
}
`;

exports[`ast gets shake information for geometry/quad AST 1`] = `
Array [
  Array [
    0,
    Array [
      0,
      1,
      2,
    ],
  ],
  Array [
    137,
    Array [
      1,
      2,
    ],
  ],
  Array [
    215,
    Array [
      2,
    ],
  ],
]
`;

exports[`ast gets shake information for getQuadVertex AST 1`] = `
Array [
  Array [
    183,
    Array [
      0,
      4,
    ],
  ],
  Array [
    229,
    Array [
      1,
      4,
    ],
  ],
  Array [
    272,
    Array [
      2,
      4,
    ],
  ],
  Array [
    314,
    Array [
      3,
      4,
    ],
  ],
  Array [
    352,
    Array [
      4,
    ],
  ],
]
`;

exports[`ast gets shake information for use/types AST 1`] = `
Array [
  Array [
    1,
    Array [
      0,
    ],
  ],
  Array [
    94,
    Array [
      1,
    ],
  ],
]
`;

exports[`ast gets shake table 1`] = `
Array [
  Array [
    7,
    Array [
      0,
      3,
      4,
    ],
  ],
  Array [
    26,
    Array [
      1,
      3,
      4,
    ],
  ],
  Array [
    52,
    Array [
      2,
      4,
    ],
  ],
  Array [
    100,
    Array [
      3,
      4,
    ],
  ],
  Array [
    163,
    Array [
      4,
    ],
  ],
]
`;

exports[`ast gets solid fragment declarations 1`] = `
Array [
  Object {
    "at": 1,
    "flags": 2,
    "func": Object {
      "attr": Array [
        "link",
      ],
      "identifiers": undefined,
      "inferred": undefined,
      "name": "getFragment",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "color",
          "type": "vec4<f32>",
        },
        Object {
          "attr": undefined,
          "name": "uv",
          "type": "vec2<f32>",
        },
      ],
      "type": "vec4<f32>",
    },
    "symbol": "getFragment",
  },
  Object {
    "at": 73,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "fragment",
      ],
      "identifiers": Array [
        "outColor",
        "getFragment",
      ],
      "inferred": undefined,
      "name": "main",
      "parameters": Array [
        Object {
          "attr": Array [
            "location(0)",
          ],
          "name": "fragColor",
          "type": "vec4<f32>",
        },
        Object {
          "attr": Array [
            "location(1)",
          ],
          "name": "fragUV",
          "type": "vec2<f32>",
        },
      ],
      "type": Object {
        "attr": Array [
          "location(0)",
        ],
        "name": "vec4<f32>",
      },
    },
    "symbol": "main",
  },
]
`;

exports[`ast gets symbol table 1`] = `
Object {
  "bindings": undefined,
  "declarations": Array [
    Object {
      "at": 7,
      "flags": 1,
      "symbol": "x",
      "variable": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": undefined,
        "name": "x",
        "qual": undefined,
        "type": "f32",
        "value": undefined,
      },
    },
    Object {
      "at": 26,
      "flags": 0,
      "symbol": "y",
      "variable": Object {
        "attr": undefined,
        "identifiers": undefined,
        "name": "y",
        "qual": undefined,
        "type": "f32",
        "value": undefined,
      },
    },
    Object {
      "at": 44,
      "constant": Object {
        "attr": undefined,
        "identifiers": undefined,
        "name": "a",
        "type": "i32",
        "value": "3",
      },
      "flags": 0,
      "symbol": "a",
    },
    Object {
      "alias": Object {
        "attr": undefined,
        "name": "integer",
        "type": "i32",
      },
      "at": 68,
      "flags": 0,
      "symbol": "integer",
    },
    Object {
      "at": 94,
      "constant": Object {
        "attr": undefined,
        "identifiers": undefined,
        "name": "b",
        "type": "i32",
        "value": undefined,
      },
      "flags": 0,
      "symbol": "b",
    },
    Object {
      "at": 125,
      "flags": 1,
      "struct": Object {
        "attr": Array [
          "export",
        ],
        "members": Array [
          Object {
            "attr": undefined,
            "name": "intensity",
            "type": "f32",
          },
          Object {
            "attr": Array [
              "annotate",
            ],
            "name": "position",
            "type": "vec3<f32>",
          },
        ],
        "name": "light",
      },
      "symbol": "light",
    },
    Object {
      "at": 218,
      "constant": Object {
        "attr": undefined,
        "identifiers": undefined,
        "name": "QUAD",
        "type": "array<vec2<i32>, 4>",
        "value": "array<vec2<i32>, 4>(
        vec2<i32>(0, 0),
        vec2<i32>(1, 0),
        vec2<i32>(0, 1),
        vec2<i32>(1, 1),
      )",
      },
      "flags": 0,
      "symbol": "QUAD",
    },
    Object {
      "at": 397,
      "flags": 6,
      "func": Object {
        "attr": Array [
          "optional",
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getInt",
        "parameters": undefined,
        "type": "i32",
      },
      "symbol": "getInt",
    },
    Object {
      "at": 442,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "main",
        "parameters": undefined,
        "type": "void",
      },
      "symbol": "main",
    },
  ],
  "enables": undefined,
  "exports": Array [
    Object {
      "at": 7,
      "flags": 1,
      "symbol": "x",
      "variable": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": undefined,
        "name": "x",
        "qual": undefined,
        "type": "f32",
        "value": undefined,
      },
    },
    Object {
      "at": 125,
      "flags": 1,
      "struct": Object {
        "attr": Array [
          "export",
        ],
        "members": Array [
          Object {
            "attr": undefined,
            "name": "intensity",
            "type": "f32",
          },
          Object {
            "attr": Array [
              "annotate",
            ],
            "name": "position",
            "type": "vec3<f32>",
          },
        ],
        "name": "light",
      },
      "symbol": "light",
    },
    Object {
      "at": 442,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "main",
        "parameters": undefined,
        "type": "void",
      },
      "symbol": "main",
    },
  ],
  "externals": Array [
    Object {
      "at": 397,
      "flags": 6,
      "func": Object {
        "attr": Array [
          "optional",
          "link",
        ],
        "identifiers": undefined,
        "inferred": undefined,
        "name": "getInt",
        "parameters": undefined,
        "type": "i32",
      },
      "symbol": "getInt",
    },
  ],
  "globals": undefined,
  "linkable": Object {
    "getInt": true,
  },
  "modules": undefined,
  "symbols": Array [
    "x",
    "y",
    "a",
    "integer",
    "b",
    "light",
    "QUAD",
    "getInt",
    "main",
  ],
  "visibles": Array [
    "x",
    "light",
    "main",
  ],
}
`;

exports[`ast gets test declarations with array 1`] = `
Array [
  Object {
    "at": 0,
    "constant": Object {
      "attr": undefined,
      "identifiers": undefined,
      "name": "QUAD",
      "type": "array<vec2<i32>, 4>",
      "value": "array<vec2<i32>, 4>(
        vec2<i32>(0, 0),
        vec2<i32>(1, 0),
        vec2<i32>(0, 1),
        vec2<i32>(1, 1),
      )",
    },
    "flags": 0,
    "symbol": "QUAD",
  },
]
`;

exports[`ast gets test empty function declaration 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": undefined,
      "inferred": undefined,
      "name": "main",
      "parameters": undefined,
      "type": "void",
    },
    "symbol": "main",
  },
]
`;

exports[`ast gets test enables 1`] = `
Array [
  "f16",
  "f64",
]
`;

exports[`ast gets test function declaration 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 0,
    "func": Object {
      "attr": Array [
        "fragment",
      ],
      "identifiers": Array [
        "A",
        "foo",
      ],
      "inferred": undefined,
      "name": "fragShader",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "in1",
          "type": "A",
        },
        Object {
          "attr": Array [
            "location(2)",
          ],
          "name": "in2",
          "type": "f32",
        },
      ],
      "type": Object {
        "attr": Array [
          "location(0)",
        ],
        "name": "vec4<f32>",
      },
    },
    "symbol": "fragShader",
  },
]
`;

exports[`ast gets test imports 1`] = `
Array [
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "MeshVertex",
        "name": "MeshVertex",
      },
    ],
    "name": "use/types",
    "symbols": Array [
      "MeshVertex",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "viewUniforms",
        "name": "view",
      },
      Object {
        "imported": "worldToClip",
        "name": "worldToClip",
      },
    ],
    "name": "use/view",
    "symbols": Array [
      "view",
      "worldToClip",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "getQuadUV",
        "name": "getQuadUV",
      },
    ],
    "name": "geometry/quad",
    "symbols": Array [
      "getQuadUV",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [],
    "name": "test",
    "symbols": Array [],
  },
]
`;

exports[`ast gets test struct declaration 1`] = `
Array [
  Object {
    "at": 0,
    "flags": 0,
    "struct": Object {
      "attr": undefined,
      "members": Array [
        Object {
          "attr": undefined,
          "name": "intensity",
          "type": "f32",
        },
        Object {
          "attr": Array [
            "annotate",
          ],
          "name": "position",
          "type": "vec3<f32>",
        },
      ],
      "name": "light",
    },
    "symbol": "light",
  },
]
`;

exports[`ast gets test var/const declarations 1`] = `
Array [
  Object {
    "at": 0,
    "flags": 0,
    "symbol": "x",
    "variable": Object {
      "attr": undefined,
      "identifiers": undefined,
      "name": "x",
      "qual": undefined,
      "type": "f32",
      "value": undefined,
    },
  },
  Object {
    "at": 18,
    "flags": 0,
    "symbol": "y",
    "variable": Object {
      "attr": undefined,
      "identifiers": undefined,
      "name": "y",
      "qual": undefined,
      "type": "f32",
      "value": undefined,
    },
  },
  Object {
    "at": 36,
    "constant": Object {
      "attr": undefined,
      "identifiers": undefined,
      "name": "a",
      "type": "i32",
      "value": "3",
    },
    "flags": 0,
    "symbol": "a",
  },
  Object {
    "alias": Object {
      "attr": undefined,
      "name": "integer",
      "type": "i32",
    },
    "at": 60,
    "flags": 0,
    "symbol": "integer",
  },
  Object {
    "at": 86,
    "constant": Object {
      "attr": undefined,
      "identifiers": undefined,
      "name": "b",
      "type": "i32",
      "value": undefined,
    },
    "flags": 0,
    "symbol": "b",
  },
]
`;

exports[`ast gets use types symbol table 1`] = `
Object {
  "bindings": undefined,
  "declarations": Array [
    Object {
      "at": 1,
      "flags": 1,
      "struct": Object {
        "attr": Array [
          "export",
        ],
        "members": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "color",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "uv",
            "type": "vec2<f32>",
          },
        ],
        "name": "SolidVertex",
      },
      "symbol": "SolidVertex",
    },
    Object {
      "at": 94,
      "flags": 1,
      "struct": Object {
        "attr": Array [
          "export",
        ],
        "members": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "normal",
            "type": "vec3<f32>",
          },
          Object {
            "attr": undefined,
            "name": "color",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "uv",
            "type": "vec2<f32>",
          },
        ],
        "name": "MeshVertex",
      },
      "symbol": "MeshVertex",
    },
  ],
  "enables": undefined,
  "exports": Array [
    Object {
      "at": 1,
      "flags": 1,
      "struct": Object {
        "attr": Array [
          "export",
        ],
        "members": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "color",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "uv",
            "type": "vec2<f32>",
          },
        ],
        "name": "SolidVertex",
      },
      "symbol": "SolidVertex",
    },
    Object {
      "at": 94,
      "flags": 1,
      "struct": Object {
        "attr": Array [
          "export",
        ],
        "members": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "normal",
            "type": "vec3<f32>",
          },
          Object {
            "attr": undefined,
            "name": "color",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "uv",
            "type": "vec2<f32>",
          },
        ],
        "name": "MeshVertex",
      },
      "symbol": "MeshVertex",
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": Array [
    "SolidVertex",
    "MeshVertex",
  ],
  "visibles": Array [
    "SolidVertex",
    "MeshVertex",
  ],
}
`;

exports[`ast gets use view declarations 1`] = `
Array [
  Object {
    "at": 0,
    "flags": 0,
    "struct": Object {
      "attr": undefined,
      "members": Array [
        Object {
          "attr": undefined,
          "name": "projectionMatrix",
          "type": "mat4x4<f32>",
        },
        Object {
          "attr": undefined,
          "name": "viewMatrix",
          "type": "mat4x4<f32>",
        },
        Object {
          "attr": undefined,
          "name": "viewPosition",
          "type": "vec4<f32>",
        },
        Object {
          "attr": undefined,
          "name": "viewResolution",
          "type": "vec2<f32>",
        },
        Object {
          "attr": undefined,
          "name": "viewSize",
          "type": "vec2<f32>",
        },
        Object {
          "attr": undefined,
          "name": "viewWorldDepth",
          "type": "f32",
        },
        Object {
          "attr": undefined,
          "name": "viewPixelRatio",
          "type": "f32",
        },
      ],
      "name": "ViewUniforms",
    },
    "symbol": "ViewUniforms",
  },
  Object {
    "at": 212,
    "flags": 33,
    "symbol": "viewUniforms",
    "variable": Object {
      "attr": Array [
        "export",
        "group(VIEW)",
        "binding(VIEW)",
      ],
      "identifiers": Array [
        "ViewUniforms",
      ],
      "name": "viewUniforms",
      "qual": "<uniform>",
      "type": "ViewUniforms",
      "value": undefined,
    },
  },
  Object {
    "at": 290,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": Array [
        "viewUniforms",
      ],
      "inferred": undefined,
      "name": "worldToView",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "position",
          "type": "vec4<f32>",
        },
      ],
      "type": "vec4<f32>",
    },
    "symbol": "worldToView",
  },
  Object {
    "at": 397,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": Array [
        "viewUniforms",
      ],
      "inferred": undefined,
      "name": "viewToClip",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "position",
          "type": "vec4<f32>",
        },
      ],
      "type": "vec4<f32>",
    },
    "symbol": "viewToClip",
  },
  Object {
    "at": 509,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": Array [
        "viewToClip",
        "worldToView",
      ],
      "inferred": undefined,
      "name": "worldToClip",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "position",
          "type": "vec4<f32>",
        },
      ],
      "type": "vec4<f32>",
    },
    "symbol": "worldToClip",
  },
  Object {
    "at": 615,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": Array [
        "viewUniforms",
      ],
      "inferred": undefined,
      "name": "clipToScreen3D",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "position",
          "type": "vec4<f32>",
        },
      ],
      "type": "vec3<f32>",
    },
    "symbol": "clipToScreen3D",
  },
  Object {
    "at": 749,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": Array [
        "viewUniforms",
      ],
      "inferred": undefined,
      "name": "screenToClip3D",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "position",
          "type": "vec4<f32>",
        },
      ],
      "type": "vec3<f32>",
    },
    "symbol": "screenToClip3D",
  },
  Object {
    "at": 889,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": Array [
        "pos",
        "viewToClip",
        "worldToView",
      ],
      "inferred": undefined,
      "name": "worldToClip3D",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "position",
          "type": "vec4<f32>",
        },
      ],
      "type": "vec3<f32>",
    },
    "symbol": "worldToClip3D",
  },
  Object {
    "at": 1026,
    "flags": 1,
    "func": Object {
      "attr": Array [
        "export",
      ],
      "identifiers": Array [
        "m",
        "viewUniforms",
        "worldScale",
        "clipScale",
        "mix",
        "pixelScale",
      ],
      "inferred": undefined,
      "name": "getPerspectiveScale",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "w",
          "type": "f32",
        },
        Object {
          "attr": undefined,
          "name": "f",
          "type": "f32",
        },
      ],
      "type": "f32",
    },
    "symbol": "getPerspectiveScale",
  },
]
`;

exports[`ast gets use view symbol table 1`] = `
Object {
  "bindings": Array [
    Object {
      "at": 212,
      "flags": 33,
      "symbol": "viewUniforms",
      "variable": Object {
        "attr": Array [
          "export",
          "group(VIEW)",
          "binding(VIEW)",
        ],
        "identifiers": Array [
          "ViewUniforms",
        ],
        "name": "viewUniforms",
        "qual": "<uniform>",
        "type": "ViewUniforms",
        "value": undefined,
      },
    },
  ],
  "declarations": Array [
    Object {
      "at": 0,
      "flags": 0,
      "struct": Object {
        "attr": undefined,
        "members": Array [
          Object {
            "attr": undefined,
            "name": "projectionMatrix",
            "type": "mat4x4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "viewMatrix",
            "type": "mat4x4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "viewPosition",
            "type": "vec4<f32>",
          },
          Object {
            "attr": undefined,
            "name": "viewResolution",
            "type": "vec2<f32>",
          },
          Object {
            "attr": undefined,
            "name": "viewSize",
            "type": "vec2<f32>",
          },
          Object {
            "attr": undefined,
            "name": "viewWorldDepth",
            "type": "f32",
          },
          Object {
            "attr": undefined,
            "name": "viewPixelRatio",
            "type": "f32",
          },
        ],
        "name": "ViewUniforms",
      },
      "symbol": "ViewUniforms",
    },
    Object {
      "at": 212,
      "flags": 33,
      "symbol": "viewUniforms",
      "variable": Object {
        "attr": Array [
          "export",
          "group(VIEW)",
          "binding(VIEW)",
        ],
        "identifiers": Array [
          "ViewUniforms",
        ],
        "name": "viewUniforms",
        "qual": "<uniform>",
        "type": "ViewUniforms",
        "value": undefined,
      },
    },
    Object {
      "at": 290,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "worldToView",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "worldToView",
    },
    Object {
      "at": 397,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "viewToClip",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "viewToClip",
    },
    Object {
      "at": 509,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewToClip",
          "worldToView",
        ],
        "inferred": undefined,
        "name": "worldToClip",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "worldToClip",
    },
    Object {
      "at": 615,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "clipToScreen3D",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec3<f32>",
      },
      "symbol": "clipToScreen3D",
    },
    Object {
      "at": 749,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "screenToClip3D",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec3<f32>",
      },
      "symbol": "screenToClip3D",
    },
    Object {
      "at": 889,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewToClip",
          "worldToView",
        ],
        "inferred": undefined,
        "name": "worldToClip3D",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec3<f32>",
      },
      "symbol": "worldToClip3D",
    },
    Object {
      "at": 1026,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "getPerspectiveScale",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "w",
            "type": "f32",
          },
          Object {
            "attr": undefined,
            "name": "f",
            "type": "f32",
          },
        ],
        "type": "f32",
      },
      "symbol": "getPerspectiveScale",
    },
  ],
  "enables": undefined,
  "exports": Array [
    Object {
      "at": 212,
      "flags": 33,
      "symbol": "viewUniforms",
      "variable": Object {
        "attr": Array [
          "export",
          "group(VIEW)",
          "binding(VIEW)",
        ],
        "identifiers": Array [
          "ViewUniforms",
        ],
        "name": "viewUniforms",
        "qual": "<uniform>",
        "type": "ViewUniforms",
        "value": undefined,
      },
    },
    Object {
      "at": 290,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "worldToView",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "worldToView",
    },
    Object {
      "at": 397,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "viewToClip",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "viewToClip",
    },
    Object {
      "at": 509,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewToClip",
          "worldToView",
        ],
        "inferred": undefined,
        "name": "worldToClip",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec4<f32>",
      },
      "symbol": "worldToClip",
    },
    Object {
      "at": 615,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "clipToScreen3D",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec3<f32>",
      },
      "symbol": "clipToScreen3D",
    },
    Object {
      "at": 749,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "screenToClip3D",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec3<f32>",
      },
      "symbol": "screenToClip3D",
    },
    Object {
      "at": 889,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewToClip",
          "worldToView",
        ],
        "inferred": undefined,
        "name": "worldToClip3D",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "position",
            "type": "vec4<f32>",
          },
        ],
        "type": "vec3<f32>",
      },
      "symbol": "worldToClip3D",
    },
    Object {
      "at": 1026,
      "flags": 1,
      "func": Object {
        "attr": Array [
          "export",
        ],
        "identifiers": Array [
          "viewUniforms",
        ],
        "inferred": undefined,
        "name": "getPerspectiveScale",
        "parameters": Array [
          Object {
            "attr": undefined,
            "name": "w",
            "type": "f32",
          },
          Object {
            "attr": undefined,
            "name": "f",
            "type": "f32",
          },
        ],
        "type": "f32",
      },
      "symbol": "getPerspectiveScale",
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": Array [
    "ViewUniforms",
    "viewUniforms",
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "getPerspectiveScale",
  ],
  "visibles": Array [
    "viewUniforms",
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "getPerspectiveScale",
  ],
}
`;

exports[`ast parses around comment lines with @attributes 1`] = `
"
//@optional @link fn toColorSpace(c: vec4<f32>) -> vec4<f32> { return c; }

struct VertexT {
  @builtin(position) position: vec4<f32>,
  @location(0) @interpolate(flat) lightIndex: u32,
};
    "
`;

exports[`ast parses comment function 1`] = `
Array [
  Object {
    "at": 0,
    "flags": 0,
    "func": Object {
      "attr": undefined,
      "identifiers": Array [
        "nextEdge",
        "atomicAdd",
        "indirectDraw",
        "activeEdges",
      ],
      "inferred": undefined,
      "name": "appendEdge",
      "parameters": Array [
        Object {
          "attr": undefined,
          "name": "id",
          "type": "u32",
        },
      ],
      "type": "void",
    },
    "symbol": "appendEdge",
  },
]
`;

exports[`ast rewrites a lot of code using the compressed AST 1`] = `
Array [
  Array [
    1,
    1,
    31,
  ],
  Array [
    1,
    33,
    47,
  ],
  Array [
    1,
    16,
    68,
  ],
  Array [
    0,
    53,
    231,
  ],
  Array [
    2,
    9,
    21,
  ],
  Array [
    3,
    17,
    25,
  ],
  Array [
    2,
    1,
    8,
  ],
  Array [
    3,
    31,
    43,
  ],
  Array [
    2,
    1,
    9,
  ],
  Array [
    3,
    36,
    48,
  ],
  Array [
    2,
    1,
    9,
  ],
  Array [
    3,
    33,
    45,
  ],
  Array [
    2,
    1,
    9,
  ],
  Array [
    3,
    12,
    30,
  ],
  Array [
    2,
    1,
    12,
  ],
  Array [
    2,
    12,
    16,
  ],
  Array [
    0,
    26,
    304,
  ],
  Array [
    3,
    0,
    7,
  ],
  Array [
    2,
    1,
    7,
  ],
  Array [
    2,
    10,
    14,
  ],
  Array [
    3,
    8,
    30,
  ],
  Array [
    2,
    1,
    8,
  ],
  Array [
    2,
    8,
    20,
  ],
  Array [
    2,
    14,
    25,
  ],
  Array [
    3,
    20,
    44,
  ],
  Array [
    2,
    1,
    8,
  ],
  Array [
    2,
    8,
    22,
  ],
  Array [
    2,
    16,
    29,
  ],
  Array [
    2,
    25,
    37,
  ],
  Array [
    2,
    18,
    29,
  ],
  Array [
    2,
    16,
    25,
  ],
  Array [
    2,
    10,
    21,
  ],
  Array [
    2,
    13,
    26,
  ],
  Array [
    2,
    26,
    38,
  ],
  Array [
    2,
    18,
    19,
  ],
  Array [
    2,
    16,
    17,
  ],
  Array [
    2,
    13,
    14,
  ],
  Array [
    2,
    14,
    27,
  ],
]
`;

exports[`ast rewrites a lot of code using the compressed AST 2`] = `
Object {
  "__nodes": Array [
    Array [
      1,
      1,
      31,
    ],
    Array [
      1,
      33,
      47,
    ],
    Array [
      1,
      16,
      68,
    ],
    Array [
      0,
      53,
      231,
    ],
    Array [
      2,
      9,
      21,
    ],
    Array [
      3,
      17,
      25,
    ],
    Array [
      2,
      1,
      8,
    ],
    Array [
      3,
      31,
      43,
    ],
    Array [
      2,
      1,
      9,
    ],
    Array [
      3,
      36,
      48,
    ],
    Array [
      2,
      1,
      9,
    ],
    Array [
      3,
      33,
      45,
    ],
    Array [
      2,
      1,
      9,
    ],
    Array [
      3,
      12,
      30,
    ],
    Array [
      2,
      1,
      12,
    ],
    Array [
      2,
      12,
      16,
    ],
    Array [
      0,
      26,
      304,
    ],
    Array [
      3,
      0,
      7,
    ],
    Array [
      2,
      1,
      7,
    ],
    Array [
      2,
      10,
      14,
    ],
    Array [
      3,
      8,
      30,
    ],
    Array [
      2,
      1,
      8,
    ],
    Array [
      2,
      8,
      20,
    ],
    Array [
      2,
      14,
      25,
    ],
    Array [
      3,
      20,
      44,
    ],
    Array [
      2,
      1,
      8,
    ],
    Array [
      2,
      8,
      22,
    ],
    Array [
      2,
      16,
      29,
    ],
    Array [
      2,
      25,
      37,
    ],
    Array [
      2,
      18,
      29,
    ],
    Array [
      2,
      16,
      25,
    ],
    Array [
      2,
      10,
      21,
    ],
    Array [
      2,
      13,
      26,
    ],
    Array [
      2,
      26,
      38,
    ],
    Array [
      2,
      18,
      19,
    ],
    Array [
      2,
      16,
      17,
    ],
    Array [
      2,
      13,
      14,
    ],
    Array [
      2,
      14,
      27,
    ],
  ],
  "cursor": [Function],
}
`;

exports[`ast rewrites a lot of code using the compressed AST 3`] = `
"
struct VertexOutput {
  @builtin position: vec4<f32>,
  @location(0) fragColor: vec4<f32>,
  @location(1) fragUV: vec2<f32>,
  @location(2) @interpolate(flat) fragIndex: u32,
};

@vertex
fn entryPoint(
  @builtin(vertex_index) vertexIndex: i32,
  @builtin(instance_index) instanceIndex: i32,
) -> VertexOutput {

  SolidVertex v = _zz_getVertex(vertexIndex, instanceIndex);

  return VertexOutput(
    v.position,
    v.color,
    v.uv,
    u32(instanceIndex),
  );
}
    "
`;

exports[`ast rewrites code using the AST 1`] = `
"
    fn _zz_getValue(index: i32) -> f32;
    fn entryPoint() -> vec3<f32> {
      let x = 3.0;
      let y = _zz_getValue(2);
      let v: vec3<f32> = vec3<f32>(x, y, 0.0);
      return v.xyz;
    }
    "
`;

exports[`ast rewrites code using the compressed AST 1`] = `
Array [
  Array [
    0,
    0,
    35,
  ],
  Array [
    2,
    8,
    16,
  ],
  Array [
    2,
    9,
    14,
  ],
  Array [
    0,
    19,
    167,
  ],
  Array [
    2,
    8,
    12,
  ],
  Array [
    2,
    32,
    33,
  ],
  Array [
    2,
    19,
    20,
  ],
  Array [
    2,
    4,
    12,
  ],
  Array [
    2,
    23,
    24,
  ],
  Array [
    2,
    25,
    26,
  ],
  Array [
    2,
    3,
    4,
  ],
  Array [
    2,
    22,
    23,
  ],
]
`;

exports[`ast rewrites code using the compressed AST 2`] = `
Object {
  "__nodes": Array [
    Array [
      0,
      0,
      35,
    ],
    Array [
      2,
      8,
      16,
    ],
    Array [
      2,
      9,
      14,
    ],
    Array [
      0,
      19,
      167,
    ],
    Array [
      2,
      8,
      12,
    ],
    Array [
      2,
      32,
      33,
    ],
    Array [
      2,
      19,
      20,
    ],
    Array [
      2,
      4,
      12,
    ],
    Array [
      2,
      23,
      24,
    ],
    Array [
      2,
      25,
      26,
    ],
    Array [
      2,
      3,
      4,
    ],
    Array [
      2,
      22,
      23,
    ],
  ],
  "cursor": [Function],
}
`;

exports[`ast rewrites code with inferred types using the AST 1`] = `
"
    fn entryPoint() -> vec3<f32> {
      let x = 3.0;
      let y = _zz_getValue(2);
      let v: vec3<f32> = vec3<f32>(x, y, 0.0);
      return v.xyz;
    }
    "
`;

exports[`ast shakes simple program 1`] = `
Array [
  Array [
    0,
    Array [
      0,
      1,
      2,
    ],
  ],
  Array [
    22,
    Array [
      1,
    ],
  ],
  Array [
    64,
    Array [
      2,
    ],
  ],
]
`;

exports[`ast shakes simple program 2`] = `
"
const x: f32 = 1.0;

fn getA() -> f32 {
  return x;
}

"
`;

exports[`ast shakes struct type args 1`] = `
Array [
  Array [
    0,
    Array [
      0,
      1,
    ],
  ],
  Array [
    79,
    Array [
      1,
    ],
  ],
]
`;

exports[`ast shakes struct type args 2`] = `
"
struct VertexOutput {
  @builtin(position) position: vec4f,
  color: vec4f,
}
@fragment fn main(arg: VertexOutput) -> @location(0) vec4f { return arg.color; }
    "
`;

exports[`ast shakes use/view AST 1`] = `
Array [
  Array [
    0,
    Array [
      0,
      1,
      2,
      4,
      7,
      3,
      5,
      6,
      8,
    ],
  ],
  Array [
    212,
    Array [
      1,
      2,
      4,
      7,
      3,
      5,
      6,
      8,
    ],
  ],
  Array [
    290,
    Array [
      2,
      4,
      7,
    ],
  ],
  Array [
    397,
    Array [
      3,
      4,
      7,
    ],
  ],
  Array [
    509,
    Array [
      4,
    ],
  ],
  Array [
    615,
    Array [
      5,
    ],
  ],
  Array [
    749,
    Array [
      6,
    ],
  ],
  Array [
    889,
    Array [
      7,
    ],
  ],
  Array [
    1026,
    Array [
      8,
    ],
  ],
]
`;

exports[`ast shakes use/view AST 2`] = `
"
struct ViewUniforms {
  projectionMatrix: mat4x4<f32>,
  viewMatrix: mat4x4<f32>,
  viewPosition: vec4<f32>,
  viewResolution: vec2<f32>,
  viewSize: vec2<f32>,
  viewWorldDepth: f32,
  viewPixelRatio: f32,
};

@group(VIEW) @binding(VIEW) var<uniform> viewUniforms: ViewUniforms;

fn worldToView(position: vec4<f32>) -> vec4<f32> {
  return viewUniforms.viewMatrix * position;
}

fn viewToClip(position: vec4<f32>) -> vec4<f32> {
  return viewUniforms.projectionMatrix * position;
}

fn worldToClip(position: vec4<f32>) -> vec4<f32> {
  return viewToClip(worldToView(position));
}

"
`;

exports[`ast shakes use/view AST using compressed AST 1`] = `
Array [
  Array [
    0,
    Array [
      0,
      1,
      2,
      4,
      7,
      3,
      5,
      6,
      8,
    ],
  ],
  Array [
    212,
    Array [
      1,
      2,
      4,
      7,
      3,
      5,
      6,
      8,
    ],
  ],
  Array [
    290,
    Array [
      2,
      4,
      7,
    ],
  ],
  Array [
    397,
    Array [
      3,
      4,
      7,
    ],
  ],
  Array [
    509,
    Array [
      4,
    ],
  ],
  Array [
    615,
    Array [
      5,
    ],
  ],
  Array [
    749,
    Array [
      6,
    ],
  ],
  Array [
    889,
    Array [
      7,
    ],
  ],
  Array [
    1026,
    Array [
      8,
    ],
  ],
]
`;
